2007-11-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.h:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-list.cc:
	* src/gnome-cmd-con-list.h:
	Added gnome_cmd_con_list_find_alias() function

2007-11-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Fix for storing advrename templates

2007-11-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-props-dialog.cc:
	* src/tags/gnome-cmd-tags-exiv2.cc:
	Add more metatags to the file property dlg

	* src/gnome-cmd-file-props-dialog.cc:
	Present image sizes in the form: 'widht x height' in the file property dlg

	* src/gnome-cmd-file-props-dialog.cc:
	* src/utils.h:
	Truncate oversized tags to 120 chars

2007-11-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Added has_tag() function

	* src/gnome-cmd-file-props-dialog.cc:
	Present selected metatags in the file property dlg

2007-11-08  Mike Crash <mike@mikecrash.com>

	* src/gnome-cmd-con-device.cc:
	Fix for mounting of devices with spaces in the name (e.g. "/media/NIKON D40")

2007-11-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-ftp-dialog.cc:
	Activate/deactivate buttons accordingly to the number of connections

2007-11-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	Set default dir to NULL for gnome_cmd_file_selector_set_connection ()

	* src/gnome-cmd-ftp-dialog.cc:
	Added tooltips to the connection list columns

	* src/gnome-cmd-user-actions.cc:
	* src/utils.cc:
	* src/utils.h:
	Added gnome_cmd_show_message() function

	* src/gnome-cmd-file-props-dialog.cc:
	Added tooltips to the metadata list columns

	* src/gnome-cmd-delete-dialog.cc:
	Fix for memory leak in delete confirm dlg

2007-11-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-bookmark-dialog.cc: